--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
                 <h1>Never Be Stuck for an Excuse Again</h1>
                 <p>Generate perfect, believable excuses for any situation in seconds. Whether you need a professional out or a creative explanation, we've got you covered.</p>
                 <div class="cta-buttons">
-                    <a href="/Smart-Excuse/smart-gen.html" class="btn btn-primary">
+                    <a href="/Smartexcuse/smart-gen.html" class="btn btn-primary">
                         <i class="fas fa-bolt btn-icon"></i>
                         Generate Now
                     </a>
